anonymous product view

--- a/templates/space/product/single.html
+++ b/templates/space/product/single.html
@@ -79,7 +79,7 @@
                     <a class="btn btn-sm btn-outline-dark" href="/explore/product/?category={{product.category}}">{{ product.category }}</a>
                     <div class="float-right">
 
-                        <div class="fb-share-button" data-href="http://{{current_site}}{{request.get_full_path}}" data-layout="button" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+                        <div class="fb-share-button" data-href="http://155.138.214.82/data/product/SwlYXwFyh8EcrOC4Hkweg_X2BOfTnfiDY5oRCkF5vZl_xvuQsH-_BkA9jvF_dtCN.JPEG" data-layout="button" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
 
                     </div>
                 </div>
@@ -87,90 +87,10 @@
                     <p>{{ product.description | linebreaks | urlize}}</p>
                 </div>
                 <br>
-                <div class="list-group-item" id="product-react-pin">
-
-                </div>
+                <a href="/account/signin/?next=/{{product.space.name}}/product/{{product.uid}}" class="list-group-item list-group-item-success">
+                    Sign In to see the contact information and explore more in sakkhat
+                </a>
                 <br>
-                {% if product.space.owner == request.user %}
-                    <a href="update/" class="list-group-item list-group-item-primary text-center">Update</a>
-                {% else %}
-                    <div class="list-group-item bt-config">
-                        {% if product.phone_request %}
-                            <button class="btn product-request" data-toggle="modal" data-target="#phone_request_model">
-                                <i class="fa fa-phone-square">Phone</i>
-                            </button>
-                            <div class="modal fade" id="phone_request_model">
-                                <div class="modal-dialog">
-                                    <div class="modal-content"> 
-                                        <div class="modal-body">
-                                            <input class="form-control" id="phone-data"
-                                            onclick="copyToClipboard(this)" value="{{product.space.owner.phone}}"  data-toggle="popover" title="Phone" data-content="copied" data-trigger="focus"/>
-                                            <a class="btn btn-primary btn-md" href="tel:{{product.space.owner.phone}}">Call</a>
-                                        </div>
-                                        <div class="modal-footer">
-                                        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        {% endif %}
-
-                        {% if product.email_request %}
-                            <button class="btn product-request" data-toggle="modal" data-target="#email_request_model">
-                                <i class="fa fa-at">Email</i>
-                            </button>
-                            <div class="modal fade" id="email_request_model">
-                                <div class="modal-dialog">
-                                    <div class="modal-content"> 
-                                        <div class="modal-body">
-                                            <input class="form-control" id="phone-data"
-                                            onclick="copyToClipboard(this)" value="{{product.space.owner.email}}"  data-toggle="popover" title="Email" data-content="copied" data-trigger="focus"/>
-                                            <a class="btn btn-primary btn-md" href="mailto:{{product.space.owner.email}}">Email</a>
-                                        </div>
-                                        <div class="modal-footer">
-                                        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        {% endif %}                        
-                    </div>
-                {% endif %}
-                <br>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-12">
-                <p class="list-group-item bg-secondary text-white">Related Products</p>
-                <div class="product-slick-container">
-                    {% for product in related_products %}
-                        <figure class="card-container slider-card">
-                            <img src="{{product.logo_url}}">
-                            <figcaption>
-                                <h5 class="title">{{product.title}}</h5>
-                                <h6>{{product.space__name}}</h6>
-                                <h6>{{product.price}} TK</h6>
-                                <div>
-                                    <button class="react-btn">
-                                        <i class="em em---1"></i>
-                                        <span class="badge badge-success">{{product.react_good}}</span>
-                                    </button>
-                                     <button class="react-btn">
-                                        <i class="em em--1"></i>
-                                        <span class="badge badge-warning">{{product.react_bad}}</span>
-                                    </button>
-                                     <button class="react-btn">
-                                        <i class="em em-rage"></i>
-                                        <span class="badge badge-danger">{{product.react_fake}}</span>
-                                    </button>
-                                </div>
-                            </figcaption>
-                            <a href="/{{product.space__name}}/product/{{product.uid}}/"></a>
-                        </figure>
-                    {% endfor %}
-                </div>
-                <br><br>
             </div>
         </div>
     </div>
@@ -187,303 +107,5 @@
             js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
-    </script>
-
-    <script type="text/javascript" src="{% static 'js/space/product/single.js'%}"></script>
-    <script type="text/javascript" src="{% static 'js/generic/slider.js'%}"></script>
-    
-    {% developing_mode as developing %}
-    {% if developing %}
-        <script type="text/javascript" src="{% static 'lib/js/slick.min.js' %}"></script>
-
-        <script type="text/javascript" src="{% static 'lib/js/react.min.js' %}"></script>
-        <script type="text/javascript" src="{% static 'lib/js/react-dom.min.js' %}"></script>
-        <script type="text/javascript" src="{% static 'lib/js/browser.min.js' %}"></script>
-    {% else %}
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.0/slick.min.js"></script>
-
-        <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
-        <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.js"></script>
-    {% endif %}
-
-    <script type="text/babel">
-        class ProductReact extends React.Component {
-
-            constructor(props){
-                super(props);
-
-                {% if request.user.is_authenticated %}
-                    var reactCodeDic = {'None':'N', 'Good':'G', 'Bad':'B', 'Fake':'F'};
-                    var reactStateDic ={'N':true, 'G':false,'B':false,'F':false};
-
-                    this.state = {
-                        'good' : 0,
-                        'bad' : 0,
-                        'fake' : 0,
-
-                        'goodClass' : 'btn btn-sm btn-outline-success',
-                        'badClass' : 'btn btn-sm btn-outline-warning',
-                        'fakeClass' : 'btn btn-sm btn-outline-danger',
-
-                        'currentReact' : 'N',
-                        'url' : '/api/product/{{product.uid}}/activity/react/?token={{token}}',
-                        'auth' : true,
-
-                        'reactCodeDic' : reactCodeDic,
-                        'reactStateDic' : reactStateDic
-                    };
-                {% else %}
-                    this.state = {
-                        'good' : 0,
-                        'bad' : 0,
-                        'fake' : 0,
-
-                        'goodClass' :'btn btn-sm btn-outline-success disabled',
-                        'badClass' : 'btn btn-sm btn-outline-warning disabled',
-                        'fakeClass' : 'btn btn-sm btn-outline-danger disabled',
-                        'auth' : false,
-
-                        'currentReact' : 'N',
-                        'url' : '/api/product/{{product.uid}}/activity/react/?token={{token}}',
-                    };
-                {% endif %}
-                
-
-                this.handleGood = this.handleGood.bind(this);
-                this.handleBad = this.handleBad.bind(this);
-                this.handleFake = this.handleFake.bind(this);
-            }
-
-            componentDidMount(){
-
-                {% if has_react %}
-                    const _currentReact = "{{current_react}}";
-                    var reactStateDic = this.state.reactStateDic;
-                    reactStateDic[_currentReact] = true;
-                    reactStateDic[this.state.reactCodeDic['None']] = false;
-
-                    this.setState({
-                        currentReact : _currentReact,
-                        reactStateDic : reactStateDic
-                    });
-                    this.updateColor(reactStateDic);
-
-                {% endif %}
-
-                this.updateReacts();
-            }
-
-            getGoodColor(state){
-                return (state ? 'btn btn-sm btn-success' : 'btn btn-sm btn-outline-success');
-            }
-
-            getBadColor(state){
-                return (state ? 'btn btn-sm btn-warning' : 'btn btn-sm btn-outline-warning');
-            }
-
-            getFakeColor(state){
-                return (state ? 'btn btn-sm btn-danger' : 'btn btn-sm btn-outline-danger');
-            }
-
-            updateColor(reactStateDic){
-
-                this.setState({
-                    goodClass : this.getGoodColor(reactStateDic[this.state.reactCodeDic['Good']]),
-                    badClass : this.getBadColor(reactStateDic[this.state.reactCodeDic['Bad']]),
-                    fakeClass : this.getFakeColor(reactStateDic[this.state.reactCodeDic['Fake']])
-                });
-            }
-
-            updateReacts(){
-                fetch(this.state.url)
-                .then(response => response.json())
-                .then(data => {
-
-                    const obj = data;
-                    this.setState({
-                        good : data.react_good,
-                        bad : data.react_bad,
-                        fake : data.react_fake
-                    });
-                });
-            }
-
-            handle(name){
-
-                var reactCodeDic = this.state.reactCodeDic;
-                var reactStateDic = this.state.reactStateDic;
-
-                var keys = Object.keys(reactCodeDic);
-
-
-                if(reactStateDic[reactCodeDic[name]]){
-                    for(var item=0; item<keys.length; item++){
-                        reactStateDic[reactCodeDic[keys[item]]] = false;
-                    }
-
-                    fetch(this.state.url+'&react='+None)
-                    .then(response => response.json())
-                    .then(date =>{
-                        this.setState({
-                            currentReact : reactCodeDic['None'],
-                            reactStateDic : reactStateDic,
-                            reactCodeDic : reactCodeDic,
-                        });
-                        this.updateReacts();
-                        this.updateColor(reactStateDic);
-                    });
-                }
-                else{
-                    for(var item=0; item<keys.length; item++){
-                        reactStateDic[reactCodeDic[keys[item]]] = false;
-                    }
-                    reactStateDic[reactCodeDic[name]] = true
-
-
-                    fetch(this.state.url+'&react='+name)
-                    .then(response => response.json())
-                    .then(date =>{
-                        this.setState({
-                            currentReact : reactCodeDic[name],
-                            reactStateDic : reactStateDic,
-                            reactCodeDic : reactCodeDic
-                        });
-                        this.updateReacts();
-                        this.updateColor(reactStateDic);
-                    });
-                }
-            }
-
-            handleGood(){
-
-                {% if request.user == product.space.owner%}
-                return;
-                {% endif %}
-
-                if(this.state.auth == false){
-                    return;
-                }
-                this.handle('Good');
-            }
-
-            handleBad(){
-
-                {% if request.user == product.space.owner%}
-                return;
-                {% endif %}
-
-                if(this.state.auth == false){
-                    return;
-                }
-                this.handle('Bad');
-            }
-
-            handleFake(){
-                {% if request.user == product.space.owner%}
-                return;
-                {% endif %}
-
-                if(this.state.auth == false){
-                    return;
-                }
-                this.handle('Fake');
-            }
-
-            render(){
-                return (
-                                
-                    <div className="bt-config">
-                        <button className={this.state.goodClass} onClick={this.handleGood}>
-                            <i className="em em---1"></i><span className="badge badge-light">{this.state.good} Good</span>
-                        </button>
-                        <button className={this.state.badClass} onClick={this.handleBad}>
-                            <i className="em em--1"></i><span className="badge badge-light">{this.state.bad} Bad</span>
-                        </button>
-                        <button className={this.state.fakeClass} onClick={this.handleFake}>
-                            <i className="em em-face_with_symbols_on_mouth"></i><span className="badge badge-light">{this.state.fake} Fake</span>
-                        </button>
-                    </div>
-                );
-            }
-        }
-
-        class ProductPin extends React.Component{
-            constructor(props){
-                super(props);
-                
-                {% if has_pin %}
-                    this.state = {
-                        'btClassName' : 'btn btn-sm btn-dark',
-                        'pinned' : true,
-                        'text' : 'remove',
-                        'url' : '/api/product/'+'{{product.uid}}'+'/activity/pin/?token={{token}}'
-                    };
-                {% else %}
-                    this.state = {
-                        'btClassName' : 'btn btn-sm btn-outline-dark',
-                        'pinned' : false,
-                        'text' : 'add',
-                        'url' : '/api/product/'+'{{product.uid}}'+'/activity/pin/?token={{token}}'
-                    };
-                {% endif %}
-
-                this.handlePin = this.handlePin.bind(this);
-            }
-
-            handlePin(){
-                if(this.state.pinned){
-                    this.setState({
-                        btClassName : 'btn btn-sm btn-outline-dark',
-                        pinned : false,
-                        text : 'add'
-                    });
-                    fetch(this.state.url+'&req=remove')
-                    .then(response => response.json())
-                    .then(data => {
-                    });
-                }
-                else{
-                    this.setState({
-                        btClassName : 'btn btn-sm btn-dark',
-                        pinned : true,
-                        text : 'remove'
-                    });
-                    fetch(this.state.url+'&req=add')
-                    .then(response => response.json())
-                    .then(data => {
-                    });
-                }
-                return;
-            }
-
-            render(){
-                return(
-                    <button className={this.state.btClassName} onClick={this.handlePin}>
-                        <i className="em em-pushpin"></i><span className="badge badge-light">{this.state.text}</span>
-                    </button>
-                )
-            }
-        }
-
-        const element = (
-            <div className="row">
-                <div className="col-sm-9">
-                    <ProductReact/>
-                </div>
-                {% if request.user.is_authenticated %}
-                    {% if not product.space.owner == request.user %}
-                        <div className="col-sm-3 bt-config">
-                            <ProductPin/>    
-                        </div>
-                    {% endif %}
-                {% endif %}
-            </div>
-                
-        );
-
-
-
-        ReactDOM.render(element, document.getElementById('product-react-pin'));
     </script>
 {% endblock %}
