--- a/templates/space/product/view.html
+++ b/templates/space/product/view.html
@@ -79,7 +79,7 @@
                     <a class="btn btn-sm btn-outline-dark" href="/explore/product/?category={{product.category}}">{{ product.category }}</a>
                     <div class="float-right">
 
-                        <div class="fb-share-button" data-href="http://155.138.214.82/data/product/SwlYXwFyh8EcrOC4Hkweg_X2BOfTnfiDY5oRCkF5vZl_xvuQsH-_BkA9jvF_dtCN.JPEG" data-layout="button" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+                        <div class="fb-share-button" data-href="http://{{current_site}}{{request.get_full_path}}" data-layout="button" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
 
                     </div>
                 </div>
